test suite: replace hardcoded policy with $RBH_TEST_POLICIES
The file test_policies.inc is generated, so we don't want it to be
located with the existing test configurations files. This config file
is now located in the main test directory, with the logs.

This will help run the test suite from a different directory.

Change-Id: I7055638949101bb790c3b24f4a46f3f3f8882d5d

--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -71,6 +71,6 @@ backup_config
 }
 
 # this one is generated from original template
-%include "test_policies.inc"
+%include "$RBH_TEST_POLICIES"
 # always include rmdir policies (tested with all tests flavors)
 %include "../../../doc/templates_v3/includes/rmdir.inc"
