--- a/tests/test_suite/cfg/log_common.conf
+++ b/tests/test_suite/cfg/log_common.conf
@@ -56,7 +56,7 @@ backup_config
 }
 
 # "legacy policies"
-%include "test_policies.inc"
+%include "$RBH_TEST_POLICIES"
 # alert policy definition
 %include "../../../doc/templates_v3/includes/alerts.inc"
 
