--- a/tests/test_suite/cfg/test_updt.conf
+++ b/tests/test_suite/cfg/test_updt.conf
@@ -82,7 +82,7 @@ db_update_params
     fileclass_update = periodic(10s);
 }
 
-%include "test_policies.inc"
+%include "$RBH_TEST_POLICIES"
 
 filesets
 {
