--- a/tests/test_suite/cfg/test_recov2.conf
+++ b/tests/test_suite/cfg/test_recov2.conf
@@ -70,7 +70,7 @@ backup_config
 }
 
 ######## Policies for this test ###########
-%include "test_policies.inc"
+%include "$RBH_TEST_POLICIES"
 
 migration_rules
 {
