tests: fix test 200.
Test 200 was failing because it matched a string with both '**' and '*',
which is forbidden. Change the test config to fix that.

Change-Id: Iba0acaa4078e01e08b9ab61dcf1545175804adad

--- a/tests/test_suite/cfg/test_path.conf
+++ b/tests/test_suite/cfg/test_path.conf
@@ -46,7 +46,7 @@ Filesets
 
         FileClass any_root_path
         {
-                definition { path == "**/dir8/*.1" }
+                definition { path == "**/dir8/file.1" }
         }
 
         FileClass any_level_tree
