policies: trim last slash of tree and path criteria.
If a tree or path criterion is badly terminated by slash
(e.g. tree == "/fs/dir/") it didn't match the root directory,
nor entries at the first level of depth.
So, trim the last slash in these criteria to avoid that.

Change configuration of test case 210 to check it.

Change-Id: Idfc8f6d045ed9e23a74a7d0bd460c7edd9f95d01

--- a/tests/test_suite/cfg/test_fileclass.conf
+++ b/tests/test_suite/cfg/test_fileclass.conf
@@ -25,7 +25,7 @@ Filesets
 
         FileClass in_dir_A
         {
-            definition { tree == "/mnt/lustre/dir_A" }
+            definition { tree == "/mnt/lustre/dir_A/" }
             migration_action_params {class="{fileclass}" ; archive_id=1;}
             report = no;
         }
