Enrich v3 config template.
Add archive_id usage example.

Change-Id: Ie908d717044cd864becce67be461d31ab31ad008

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -73,7 +73,7 @@ lhsm_archive_parameters {
     suspend_error_min= 100;
 
     # overrides policy default action
-    action = cmd("lfs hsm_archive /mnt/lustre/.lustre/fid/{fid}");
+    action = cmd("lfs hsm_archive --archive {archive_id} /mnt/lustre/.lustre/fid/{fid}");
 
     # default action parameters
     action_params {
