tests: removed 'filesets' blocks and move 'fileclass' blocks to top level.
'fileclass' blocks can now be specified at the top level of the config.
Change test config test files accordingly.

Change-Id: I7a71e520e10ca9b6f09767ea564e900a192ecd5a

--- a/tests/test_suite/cfg/test3.conf
+++ b/tests/test_suite/cfg/test3.conf
@@ -3,36 +3,32 @@
 
 # TEST: - Fileset definition based on filename
 #       - Migration action params
-#       - Migration rule using filesets
+#       - Migration rule using fileclasses
 
 %include "common.conf"
 
-Filesets
+FileClass even_files
 {
-        FileClass even_files
+        definition
         {
-                definition
-                {
-                        name == "*[02468]"
-                }
-                migration_action_params {
-                    case = "{rule}";
-                    archive_id = 1;
-                }
+                name == "*[02468]"
         }
+        migration_action_params {
+            case = "{rule}";
+            archive_id = 1;
+        }
+}
 
-        FileClass odd_files
+FileClass odd_files
+{
+        definition
         {
-                definition
-                {
-                        name == "*[13579]"
-                }
-                migration_action_params {
-                    case = "{rule}";
-                    archive_id = 1;
-                }
+                name == "*[13579]"
         }
-
+        migration_action_params {
+            case = "{rule}";
+            archive_id = 1;
+        }
 }
 
 
