--- a/tests/test_suite/cfg/test_maintenance.conf
+++ b/tests/test_suite/cfg/test_maintenance.conf
@@ -3,7 +3,7 @@
 
 # TEST: - Fileset definition based on filename
 #       - Migration params
-#       - Migration policy using filesets
+#       - Migration policy using fileclasses
 
 %include "common.conf"
 
