--- a/tests/test_suite/cfg/test_path.conf
+++ b/tests/test_suite/cfg/test_path.conf
@@ -3,63 +3,58 @@
 
 # TEST: - Fileset definition based on xattrs
 #       - Migration params
-#       - Migration policies using Filesets
+#       - Migration policies using fileclasses
 
 %include "common.conf"
 
-Filesets
+FileClass absolute_path
 {
-        FileClass absolute_path
-        {
-                definition { path == "/mnt/lustre/dir1/*/A" }
-        }
+        definition { path == "/mnt/lustre/dir1/*/A" }
+}
 
-        FileClass absolute_tree
-        {
-                definition { tree == "/mnt/lustre/dir2" }
-        }
+FileClass absolute_tree
+{
+        definition { tree == "/mnt/lustre/dir2" }
+}
 
-        FileClass path_depth2
-        {
-                definition { path == "*/dir3/*" }
-        }
+FileClass path_depth2
+{
+        definition { path == "*/dir3/*" }
+}
 
-        FileClass tree_depth2
-        {
-                definition { tree == "*/dir4" }
-        }
+FileClass tree_depth2
+{
+        definition { tree == "*/dir4" }
+}
 
-        FileClass relative_path
-        {
-                definition { path == "dir5/*" }
-        }
+FileClass relative_path
+{
+        definition { path == "dir5/*" }
+}
 
-        FileClass relative_tree
-        {
-                definition { tree == "dir6" or tree == "file.6" }
-        }
+FileClass relative_tree
+{
+        definition { tree == "dir6" or tree == "file.6" }
+}
 
-        FileClass any_root_tree
-        {
-                definition { tree == "**/dir7" }
-        }
+FileClass any_root_tree
+{
+        definition { tree == "**/dir7" }
+}
 
-        FileClass any_root_path
-        {
-                definition { path == "**/dir8/file.1" }
-        }
+FileClass any_root_path
+{
+        definition { path == "**/dir8/file.1" }
+}
 
-        FileClass any_level_tree
-        {
-                definition { tree == "/mnt/lustre/dir9/**/dir10" }
-        }
+FileClass any_level_tree
+{
+        definition { tree == "/mnt/lustre/dir9/**/dir10" }
+}
 
-        FileClass any_level_path
-        {
-                definition { path == "/mnt/lustre/dir11/**/file" }
-        }
-
-
+FileClass any_level_path
+{
+        definition { path == "/mnt/lustre/dir11/**/file" }
 }
 
 
