packaging: added basic configuration file.
Added a basic configuration file to installed templates.
Renamed template.conf to example.conf.

Change-Id: Ia9a4c75b67c1490f4a6fc944ad602c51c0c56f81

--- a/Makefile.am
+++ b/Makefile.am
@@ -85,7 +85,8 @@ EXTRA_DIST= robinhood.spec robinhood.spec.in \
 	doc/templates_v3/includes/alerts.inc \
 	doc/templates_v3/includes/backup.inc \
 	doc/templates_v3/includes/rmdir.inc \
-	doc/templates_v3/template.conf \
+	doc/templates_v3/example.conf \
+	doc/templates_v3/basic.conf \
 	ChangeLog \
 	man/*.1
 
