packaging: drop obsolete stuff.
liblustreapi is always distributed in "lustre" RPM, so don't care about
other packages like lustre-modules.

Remove RHEL4 conpatibility macros in spec file.

Set rpmbuild default for --with/--without according to Lustre >= 2.5.
Explicitely specify --with/--without in 'make rpm'

Change-Id: I708e375898bf70f3b0638fb28c8dce2657f6f49d

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,12 +31,18 @@ endif
 
 if LUSTRE_HSM
   rpmbuild_opt += --with lhsm
+else
+  rpmbuild_opt += --without lhsm
 endif
 if SHOOK
   rpmbuild_opt += --with shook
+else
+  rpmbuild_opt += --without shook
 endif
 if HSM_LITE
   rpmbuild_opt += --with backup
+else
+  rpmbuild_opt += --without backup
 endif
 
 new: clean all
