init script: wait between kill -9 and check if pid exists
kill -9 does not guarantee that the process has died when it returns,
if robinhood was in a syscall (which it likely was) it needs to be given
a bit of time to actually die

Change-Id: I118971e8550fa20b48dc9891188168cb88740e60

--- a/scripts/robinhood.init.in
+++ b/scripts/robinhood.init.in
@@ -196,6 +196,7 @@ stop_fs()
 			done
 			#[ -d /proc/$pid ] && initlog $INITLOG_ARGS -c "/bin/kill -9 $pid" "$label"
 			[ -d /proc/$pid ] && action "Force shutdown of Robinhood for $conf ..." /bin/kill -9 $pid
+			sleep 1
 			echo -n "Checking process status ..."
 			if [ -d /proc/$pid ] ; then
 				echo_failure
