pkg: add missing file (alert include) to rpm.
Change-Id: I747089d3a7dcc3eeb433f8b91214ddeea55c5831

--- a/configure.ac
+++ b/configure.ac
@@ -133,7 +133,7 @@ if test "x$support_lustre" = "xyes" ; then
             AC_DEFINE(_LUSTRE_IDL_HEADER, 1, [lustre_idl header exists])
         fi
 
-        # this defines LVERSION and LPACKAGE variables
+        # this defines LVERSION variable
         if test -z "$LDIR" ; then
             AX_LUSTRE_VERSION
         else
