--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -116,6 +116,7 @@ mkdir -p $RPM_BUILD_ROOT/%{_sysconfdir}/ld.so.conf.d
 install -m 644 doc/templates/includes/lhsm.inc $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/includes/
 %endif
 install -m 644 doc/templates/includes/tmpfs.inc $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/includes/
+install -m 644 doc/templates/includes/alerts.inc $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/includes/
 install -m 644 doc/templates/example.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/templates/
 install -m 644 doc/templates/basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/templates/
 
@@ -243,6 +244,7 @@ ldconfig
 %config %{_sysconfdir}/robinhood.d/includes/lhsm.inc
 %endif
 %config %{_sysconfdir}/robinhood.d/includes/tmpfs.inc
+%config %{_sysconfdir}/robinhood.d/includes/alerts.inc
 %config %{_sysconfdir}/robinhood.d/templates/example.conf
 %config %{_sysconfdir}/robinhood.d/templates/basic.conf
 
