packaging: add 'Obsoletes' clause in spec file for v2 flavors.
Also make test suite a 'noarch' rpm as it just contains scripts
and config files.

Change-Id: I4dcff25fbb14034d9c84606b7211bfb6f6da00d4

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -45,7 +45,7 @@ BuildRequires: lustre >= %{lversion}
 %if %{with mysql}
 BuildRequires: /usr/include/mysql/mysql.h
 %endif
-
+Obsoletes: robinhood-tmpfs < 3.0, robinhood-backup < 3.0, robinhood-lhsm < 3.0
 
 %description
 Robinhood is a tool for monitoring and purging file systems. It is designed to
@@ -90,6 +90,7 @@ Tools for MDS recovery.
 Summary: Test suite for Robinhood
 Group: Applications/System
 Requires: robinhood robinhood-adm
+Release: @RELEASE@.noarch
 
 %description tests
 Lustre and Posix tests for Robinhood.
