Robinhood should not require "lustre" for install and build but rather "lustre-client" as it doesn't need any other component to operate properly.
Change-Id: I3137d06fb2ecaf66aef8b3865618f49eba720e28

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -39,8 +39,8 @@ BuildRequires: glib2-devel >= 2.16
 BuildRequires: libattr-devel
 BuildRequires: mailx
 %if %{with lustre}
-Requires: lustre >= %{lversion}
-BuildRequires: lustre >= %{lversion}
+Requires: lustre-client >= %{lversion}
+BuildRequires: lustre-client >= %{lversion}
 %endif
 %if %{with mysql}
 BuildRequires: /usr/include/mysql/mysql.h
