policies: convert 'ignore' statements to DB filter.
This converts 'ignore' rules to DB filters, thus pre-selecting
entries for policy runs.
This enables a better implementation of 'alert' policy
by specifying 'last_check' criteria in policy rules (user-defined)
instead of specifying it in the scope (not supposed to be modified
by basic users).

Change-Id: I3216d1c609574e0403e63fcffdad5dc1f6639fef

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -172,6 +172,11 @@ cleanup_trigger {
 ### Alerts specification 
 alert_rules {
 
+    # don't check entries more frequently than daily
+    ignore { last_check < 1d }
+    # don't check entries while they are modified
+    ignore { last_mod < 1h }
+
     rule raise_alert {
         ## List all fileclasses that would raise alerts HERE:
         target_fileclass = f1;
