--- a/tests/test_suite/cfg/log_common.conf
+++ b/tests/test_suite/cfg/log_common.conf
@@ -67,6 +67,11 @@ fileclass file2 { definition { name == "file.2" } }
 
 ### Alerts specification
 alert_rules {
+    # don't check entries more frequently than daily
+    ignore { last_check < 1d }
+    # don't check entries while they are modified
+    ignore { last_mod < 1h }
+
     rule raise_alert {
         ## HERE, list all fileclasses that must raise an alert:
         target_fileclass = file1;
