packaging: detect 'lustre' or 'lustre-client'.
Robinhood only requires 'lustre-client' to build.
Since lustre 2.8, 'lustre' package provides 'lustre-client',
so we can deal with the case 'lustre' RPM is installed
without 'lustre-client'.

However, with older lustre versions, we need to detect
if the installed package is 'lustre' or 'lustre-client'.
We detect this at '/configure' time, and generate the
spec file accordingly.

Change-Id: Iac8df07e0154df970417009a596d33f622558539

--- a/configure.ac
+++ b/configure.ac
@@ -146,6 +146,9 @@ if test "x$support_lustre" = "xyes" ; then
             LDEFINES="--define=\"lversion $LVERSION\""
             AC_DEFINE_UNQUOTED(LUSTRE_VERSION, "$LVERSION",  [Lustre version])
         fi
+        if test -n "$LPACKAGE"; then
+            LDEFINES="$LDEFINES --define=\"lpackage $LPACKAGE\""
+        fi
         AC_SUBST(LDEFINES)
 
         FS_LDFLAGS="-llustreapi"
