modules: implement 'checker'.
This module manages check command execution and
maintains the following attributes:
 - last_check
 - last_success
 - output (output of the last successful command).

It also allows action execution helper to return
the output of an executed command.

Change-Id: If67d53fa06ffc92c7cbf7b032c63a25a38768cd2

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -14,6 +14,8 @@ General {
 %include "includes/tmpfs.inc"
 # include template for alerts
 %include "includes/alerts.inc"
+# include template for md5 check
+%include "includes/check.inc"
 
 #### fileclass definitions ####
 
@@ -196,6 +198,30 @@ alert_rules {
         action_params { alert = clear; }
         # apply to all entries that don't match 'alert_check'
         condition = true;
+    }
+}
+
+########### md5 check rules ############
+
+md5_check_parameters {
+    action = cmd("scripts/rbh_md5_wrap.sh '{output}' '{path}'");
+}
+
+fileclass never_checked {
+    definition { md5_check.last_check == 0 or md5_check.output == "" }
+}
+
+md5_check_rules {
+    ignore { last_check < 1d }
+    ignore { last_mod < 1d }
+
+    rule initial_check {
+        target_fileclass = never_checked;
+        condition { last_mod > 1d }
+    }
+
+    rule default {
+       condition { last_mod > 1d and last_check > 7d }
     }
 }
 
