Enable the use of policy specific info in action_params and commands.
Allow defining action parameters, or command parameters,
using policy specific info.

E.g.
action_params {
	old_status = "{status}";
	old_lhsm_status = "{lhsm.status}";
}

action = cmd("/usr/bin/check.sh "{output}");

Change-Id: I9cbf8bfa973bd1e0809ce2274131497b5e262745

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -20,6 +20,8 @@ test_forcestripe_LDADD=$(DB_LDFLAGS) $(PURPOSE_LDFLAGS) $(FS_LDFLAGS)
 test_uidgidcache_SOURCES=test_uidgidcache.c ../common/uidgidcache.c ../common/RW_Lock.c
 test_params_SOURCES=test_params.c ../common/rbh_params.c
 test_confparam_SOURCES=test_confparam.c ../common/param_utils.c ../common/rbh_params.c
+test_confparam_LDFLAGS=$(DB_LDFLAGS) $(PURPOSE_LDFLAGS) $(FS_LDFLAGS)
+test_confparam_LDADD=../policies/libpolicies.la ../common/libcommontools.la
 test_parse_SOURCES	    = test_parse.c
 test_parse_LDADD         =  ../cfg_parsing/libconfigparsing.la
 
