--- a/tests/test_suite/cfg/test_action_params.conf
+++ b/tests/test_suite/cfg/test_action_params.conf
@@ -23,11 +23,15 @@ fileclass class3 {
 
 migration_parameters {
     # override policy default_action with a cmd
-    action = cmd("lfs hsm_archive -a {archive_id} /mnt/lustre/.lustre/fid/{fid} --data cos={cos}"); 
+    action = cmd("lfs hsm_archive -a '{archive_id}' '/mnt/lustre/.lustre/fid/{fid}' --data 'cos={cos}'");
     # default action params for the policy
     action_params {
         archive_id = 1;
         cos = 1;
+        status = "{lhsm.status}";
+        status2 = "{status}";
+        prev_arch = "{lhsm.archive_id}";
+        prev_arch2 = "{archive_id}";
     }
 }
 
@@ -37,7 +41,7 @@ migration_rules {
         target_fileclass = class1b;
         condition { last_mod > 1 }
         # rule-specific action cmd
-        action = cmd("lfs hsm_archive -a {archive_id} {fullpath} --data cos={cos},class={fileclass}");
+        action = cmd("lfs hsm_archive -a '{archive_id}' '{fullpath}' --data 'cos={cos},class={fileclass}'");
         action_params { cos = 2; }
     }
 
