checker: add 'md5sum' wrapper for checker module.
For now, this script only supports lustre version > 2.4
(it is based on 'lfs data_version').
It will have to be completed to support POSIX filesystems
(based on mtime+size?).

Change-Id: Iaaaf78528f0807ee9e8f5b53962badaa6b7b3072

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -203,12 +203,12 @@ alert_rules {
 
 ########### md5 check rules ############
 
-md5_check_parameters {
-    action = cmd("scripts/rbh_md5_wrap.sh '{output}' '{path}'");
-}
-
 fileclass never_checked {
+    # neber checked => last_check == 0
+    # 'output' stands for previous command stdout
     definition { md5_check.last_check == 0 or md5_check.output == "" }
+    # don't display this fileclass in --classinfo reports.
+    report = no;
 }
 
 md5_check_rules {
@@ -223,6 +223,12 @@ md5_check_rules {
     rule default {
        condition { last_mod > 1d and last_check > 7d }
     }
+}
+
+# start md5_check hourly
+md5_check_trigger {
+    trigger_on = periodic;
+    check_interval = 1h;
 }
 
 ########### end of policy rules ############
