--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -226,6 +226,7 @@ ldconfig
 %{_sbindir}/rbh-report
 %{_sbindir}/rbh-diff
 %{_sbindir}/rbh-undelete
+%{_sbindir}/rbh_md5_wrap.sh
 %{_bindir}/rbh-du
 %{_bindir}/rbh-find
 
