--- a/.gitignore
+++ b/.gitignore
@@ -64,18 +64,15 @@ TAGS
 /src/policy_modules/rmdir/Makefile
 /src/robinhood/Makefile
 /src/tests/Makefile
+/src/tests/test_uidgidcache
+/src/tests/test_params
+/src/tests/test_confparam
+/src/tests/test_parse
+/src/tests/create_nostripe
+/src/tests/test_forcestripe
 /src/backend_ext/Makefile
 /tests/Makefile
 /web_gui/Makefile
-/src/robinhood/rbh-backup
-/src/robinhood/rbh-backup-du
-/src/robinhood/rbh-backup-find
-/src/robinhood/rbh-backup-import
-/src/robinhood/rbh-backup-recov
-/src/robinhood/rbh-backup-report
-/src/robinhood/rbh-backup-undo-rm
-/src/robinhood/rbh-backup-diff
-/src/robinhood/rbh-backup-rebind
 /src/tools/Makefile
 /src/tools/gen_lov_objid
 /src/tools/read_lovea
@@ -85,19 +82,10 @@ TAGS
 /src/robinhood/rbh-find
 /src/robinhood/rbh-report
 /src/robinhood/rbh-diff
+/src/robinhood/rbh-undelete
 /src/robinhood/robinhood
-/src/robinhood/rbh-lhsm
-/src/robinhood/rbh-lhsm-du
-/src/robinhood/rbh-lhsm-find
-/src/robinhood/rbh-lhsm-import
-/src/robinhood/rbh-lhsm-recov
-/src/robinhood/rbh-lhsm-report
-/src/robinhood/rbh-lhsm-undo-rm
-/src/robinhood/rbh-lhsm-diff
 /tests/lustre_fs/*.log
 /tests/posix_fs/*.log
 /TODO
-/src/include/hsmlite_types.h
-/src/include/lustre_hsm_types.h
-/src/include/tmp_fs_mgr_types.h
+/src/include/db_schema.h
 /scripts/make_mans.sh
