(WIP) all command arguments should be quoted in config.
Change-Id: I04c1a5d67c5ea1c493795ad1073f28047847bb41

--- a/doc/templates/example.conf
+++ b/doc/templates/example.conf
@@ -72,7 +72,7 @@ lhsm_archive_parameters {
     suspend_error_min= 100;
 
     # overrides policy default action
-    action = cmd("lfs hsm_archive --archive {archive_id} /mnt/lustre/.lustre/fid/{fid}");
+    action = cmd("lfs hsm_archive --archive '{archive_id}' '/mnt/lustre/.lustre/fid/{fid}'");
 
     # default action parameters
     action_params {
@@ -88,7 +88,7 @@ lhsm_archive_rules {
         condition { last_mod >= 30min }
 
         # overrides policy action
-        action = cmd("lfs hsm_archive {fullpath}");
+        action = cmd("lfs hsm_archive '{fullpath}'");
         action_params { archive_id = 2; }
     }
 
