--- a/tests/test_suite/cfg/RemovingDir_Mixed.conf
+++ b/tests/test_suite/cfg/RemovingDir_Mixed.conf
@@ -28,7 +28,7 @@ rmdir_rules {
 
     rule rmdir_recurse {
         target_fileclass = dir1;
-        action = cmd("rm -rf {fullpath}");
+        action = cmd("rm -rf '{fullpath}'");
         condition { last_mod >= 0s }
     }
 }
