--- a/tests/test_suite/cfg/migr_fail.conf
+++ b/tests/test_suite/cfg/migr_fail.conf
@@ -11,7 +11,7 @@ migration_parameters {
 
 	lru_sort_attr = creation;
 
-    action = cmd("./cfg/migr_failer.sh {arg}");
+    action = cmd("./cfg/migr_failer.sh '{arg}'");
     action_params { arg = "ok"; }
 }
 
