--- a/tests/test_suite/cfg/test_custom_purge.conf
+++ b/tests/test_suite/cfg/test_custom_purge.conf
@@ -43,7 +43,7 @@ purge_rules
 
 purge_parameters
 {
-    action = cmd("./rm_script {fsname} {fid} {path}");
+    action = cmd("./rm_script '{fsname}' '{fid}' '{path}'");
 }
 
 ##### basic HSM remove policy ######
