--- a/tests/test_suite/cfg/common.conf
+++ b/tests/test_suite/cfg/common.conf
@@ -73,7 +73,7 @@ backup_config
 
 # Lustre/HSM specific configuration
 lhsm_config {
-    rebind_cmd = "/usr/sbin/lhsmtool_posix --hsm_root=/tmp/backend --archive {archive_id} --rebind {oldfid} {newfid} {fsroot}";
+    rebind_cmd = "/usr/sbin/lhsmtool_posix --hsm_root=/tmp/backend --archive '{archive_id}' --rebind '{oldfid}' '{newfid}' '{fsroot}'";
 }
 
 # this one is generated from original template
