--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -263,6 +263,10 @@ fi
 %files posix
 %endif
 
+%if %{with lhsm}
+%{_sbindir}/lhsmtool_cmd
+%endif
+
 %defattr(-,root,root,-)
 #%doc README
 #%doc COPYING
