tools: add a generic cmd exec copytool
Initial version of a lhsmtool_cmd that executes commands
expressed in a configuration file.

Only archive and restore are implemented as of now.

Signed-off-by: Henri Doreau <henri.doreau@cea.fr>
Signed-off-by: Stephane Thiell <sthiell@stanford.edu>
Change-Id: Ie11acbe001ae7a08ae107995a9232b6c2c513147

--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -245,6 +245,7 @@ ldconfig
 # robinhood RPM name for lustre is robinhood-lustre
 %if %{with lustre}
 %files lustre
+%{_sbindir}/lhsmtool_cmd
 %else
 # robinhood RPM name for posix is robinhood-posix
 %files posix
