--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -188,7 +188,7 @@ rm -rf $RPM_BUILD_ROOT
 %else
 %post posix
 %endif
-ldconfig
+/sbin/ldconfig
 if [ -x %{_initrddir}/robinhood ]; then
   if %{_initrddir}/robinhood status | grep running | grep -v "not running"  >/dev/null 2>&1; then
     %{_initrddir}/robinhood stop
@@ -219,9 +219,9 @@ fi
 %if %{with lustre}
 %postun lustre
 %else
-%postun posix -p /sbin/ldconfig
+%postun posix
 %endif
-ldconfig
+/sbin/ldconfig
 
 %if %{with common_rpms}
 
@@ -313,6 +313,9 @@ ldconfig
 %{_initrddir}/robinhood
 
 %changelog
+
+* Fri Mar 25 2016 Thomas Leibovici <thomas.leibovici@cea.fr> 3.0-0.alpha2
+- Robinhood v3 alpha2
 
 * Wed Dec 16 2015 Thomas Leibovici <thomas.leibovici@cea.fr> 3.0-0.alpha1
 - Robinhood v3 alpha1
